# omni-bridge

./: .catalog-info.yaml  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  dist-workspace.toml
near/: CLAUDE.md  Cargo.toml  build.sh  rust-toolchain
near/mock-token/: Cargo.toml
near/mock/mock-evm-prover/: Cargo.toml
near/mock/mock-evm-prover/src/: lib.rs
near/mock/mock-global-contract-deployer/: Cargo.toml
near/mock/mock-global-contract-deployer/src/: lib.rs
near/mock/mock-prover/: Cargo.toml
near/mock/mock-prover/src/: lib.rs
near/mock/mock-token/: Cargo.toml
near/mock/mock-token-receiver/: Cargo.toml
near/mock/mock-token-receiver/src/: lib.rs
near/mock/mock-token/src/: lib.rs
near/mock/mock-utxo-connector/: Cargo.toml
near/mock/mock-utxo-connector/src/: lib.rs
near/mock/mock-wormhole-prover/: Cargo.toml
near/mock/mock-wormhole-prover/src/: lib.rs
near/nep141-locker/: .catalog-info.yaml  Cargo.toml
near/nep141-locker/src/: errors.rs  lib.rs  storage.rs  types.rs
near/nep141-locker/src/tests/: lib_test.rs
near/omni-bridge/: .catalog-info.yaml  Cargo.toml
near/omni-bridge/src/: btc.rs  errors.rs  helpers.rs  lib.rs  migrate.rs  relayer_staking.rs  storage.rs  token_lock.rs
near/omni-bridge/src/tests/: lib_test.rs  mod.rs
near/omni-prover/btc-prover/: Cargo.toml
near/omni-prover/btc-prover/src/: lib.rs
near/omni-prover/eth-light-client-prover-proxy/: Cargo.toml
near/omni-prover/evm-mpc-prover/: Cargo.toml
near/omni-prover/evm-mpc-prover/src/: lib.rs  tests.rs
near/omni-prover/evm-prover/: .catalog-info.yaml  Cargo.toml
near/omni-prover/evm-prover-proxy/: Cargo.toml
near/omni-prover/evm-prover-proxy/src/: lib.rs
near/omni-prover/evm-prover/src/: lib.rs
near/omni-prover/hot-prover/: .catalog-info.yaml  Cargo.toml
near/omni-prover/hot-prover/src/: lib.rs
near/omni-prover/mock-omni-prover/: Cargo.toml
near/omni-prover/mpc-omni-prover/: .catalog-info.yaml  Cargo.toml
near/omni-prover/mpc-omni-prover/src/: lib.rs  tests.rs  verify.rs
near/omni-prover/omni-prover/: .catalog-info.yaml  Cargo.toml
near/omni-prover/omni-prover/src/: lib.rs
near/omni-prover/polymer-prover/: Cargo.toml
near/omni-prover/polymer-prover/src/: lib.rs
near/omni-prover/rainbow-omni-prover-proxy/: Cargo.toml
near/omni-prover/rainbow-omni-prover-proxy/src/: lib.rs
near/omni-prover/wormhole-omni-prover-proxy/: .catalog-info.yaml  Cargo.toml
near/omni-prover/wormhole-omni-prover-proxy/src/: byte_utils.rs  lib.rs  parsed_vaa.rs
near/omni-tests/: Cargo.toml  README.md
near/omni-tests/src/: btc_storage_fix.rs  dao_fin_transfer.rs  deploy_token_test.rs  environment.rs  fast_transfer.rs  fin_transfer.rs  helpers.rs  init_transfer.rs  lib.rs  native_fee_role.rs  omni_token.rs  relayer_staking.rs  utxo_fin_transfer.rs  zcash_stale_transfer_poc.rs
near/omni-tests/src/data/: legacy_token_deployer-0.2.4.wasm  omni_bridge-0_2_13.wasm  omni_bridge-0_2_17.wasm  omni_bridge-0_2_6.wasm  omni_bridge-0_3_2.wasm  omni_bridge-0_4_1.wasm  omni_bridge-0_4_3.wasm  omni_bridge-0_4_5.wasm
near/omni-token/: .catalog-info.yaml  Cargo.toml
near/omni-token/src/: lib.rs  migrate.rs  omni_ft.rs
near/omni-types/: .catalog-info.yaml  Cargo.toml
near/omni-types/src/: bounded_string.rs  btc.rs  errors.rs  evm_events.rs  hex_types.rs  lib.rs  locker_args.rs  mpc_types.rs  near_events.rs  prover_args.rs  prover_result.rs  prover_types.rs  sol_address.rs  token_unlock_event.rs  utils.rs
near/omni-types/src/aptos/: events.rs
near/omni-types/src/evm/: events.rs  header.rs  mod.rs  receipt.rs  utils.rs
near/omni-types/src/polymer/: decoder.rs  events.rs  mod.rs
near/omni-types/src/starknet/: events.rs
near/omni-types/src/tests/: lib_test.rs
near/omni-types/src/ton/: address.rs  events.rs  mod.rs
near/res/: evm_prover.wasm  omni_bridge.wasm  omni_prover.wasm  omni_token.wasm  token_deployer.wasm  wormhole_omni_prover_proxy.wasm
near/token-deployer/: Cargo.toml  build.rs
near/token-deployer/src/: lib.rs  migrate.rs
omni-relayer/: .catalog-info.yaml  .dockerignore  .example-env  CLAUDE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  config.toml  deny.toml  docker-compose.yml  example-config.toml  example-devnet-config.toml  example-docker-config.toml  example-mainnet-config.toml  example-testnet-config.toml  nats.conf  redis-utility.sh
omni-relayer/src/: config.rs  defaults.rs  main.rs  types.rs
omni-relayer/src/startup/: bridge_indexer.rs  eth.rs  event_handlers.rs  evm.rs  evm_fee_bumping.rs  mod.rs  mongo_ingestion.rs  nats_ingestion.rs  near.rs  solana.rs
omni-relayer/src/startup/native_indexers/: near.rs  solana.rs
omni-relayer/src/utils/: bridge_api.rs  eth.rs  evm.rs  fee.rs  mod.rs  nats.rs  near.rs  nonce.rs  pending_transactions.rs  price.rs  redis.rs  solana.rs  storage.rs  wormhole.rs
omni-relayer/src/workers/: btc.rs  eth.rs  evm.rs  mod.rs  near.rs  solana.rs  starknet.rs  utxo.rs
prepopulate-locked-tokens/: Cargo.toml  README.md  example.env  locked-tokens-mainnet.json  locked-tokens-testnet.json  tokens-mainnet.txt  tokens-testnet.txt
prepopulate-locked-tokens/src/: apply.rs  config.rs  main.rs  solvency.rs  tokens.rs
prepopulate-locked-tokens/src/clients/: evm.rs  mod.rs  near.rs  solana.rs  starknet.rs  svm.rs
relayer/: Cargo.toml
relayer/src/: defaults.rs  main.rs  startup.rs  types.rs  utils.rs
solana/bridge_token_factory/programs/bridge_token_factory/: Cargo.toml  build.rs
solana/bridge_token_factory/programs/bridge_token_factory/src/: constants.rs  deploy_token.rs  error.rs  finalize_deposit.rs  lib.rs
solana/programs/bridge_token_factory/: Cargo.toml  build.rs
solana/programs/bridge_token_factory/src/: constants.rs  error.rs  lib.rs
solana/programs/bridge_token_factory/src/instructions/: wormhole_cpi.rs
solana/programs/bridge_token_factory/src/state/: config.rs  mod.rs  used_nonces.rs
solana/programs/bridge_token_factory/tests/: mollusk.rs
solana/programs/bridge_token_factory/tests/mollusk/: helpers.rs  test_change_config.rs  test_finalize_transfer.rs  test_get_version.rs  (+6 more)
(+438 files in other folders)
