[workspace.package]
authors = ["Near One <info@nearone.org>"]
repository = "https://github.com/Near-One/omni-bridge"

[workspace]
resolver = "2"
members = [
    "omni-bridge",
    "token-deployer",
    "omni-prover/omni-prover",
    "omni-prover/wormhole-omni-prover-proxy",
    "omni-prover/evm-prover",
    "omni-token",
    "omni-types",
    "omni-tests",
    "mock/mock-token",
    "mock/mock-prover",
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.dependencies]
cargo-near-build = "0.4.3"
near-sdk = "5.15.1"
near-contract-standards = "5.7.0"
hex = "0.4.2"
borsh = "1.5.1"
serde = { version = "1.0.200", features = ["derive"] }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.4.1" }
omni-types = { path = "omni-types" }
strum_macros = "0.27.1"
near-workspaces = "0.16.0"
num_enum = "0.7.3"
tokio = "1.40"
anyhow = "1"
schemars = "0.8"
alloy = { version = "1.0.9", default-features = false, features = ["rlp", "sol-types"] }
ethereum-types = { version = "0.15.1", default-features = false, features = ["rlp", "serialize"] }
rlp = "0.6"
sha3 = "0.10.0"
rstest = "0.25.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
