[workspace.package]
authors = ["Near One <info@nearone.org>"]
repository = "https://github.com/Near-One/omni-bridge"
version = "0.4.4"

[workspace]
resolver = "2"
members = [
    "omni-bridge",
    "token-deployer",
    "omni-prover/wormhole-omni-prover-proxy",
    "omni-prover/evm-prover",
    "omni-prover/mpc-omni-prover",
    "omni-token",
    "omni-types",
    "omni-tests",
    "mock/mock-token",
    "mock/mock-prover",
    "mock/mock-token-receiver",
    "mock/mock-utxo-connector",
    "mock/mock-global-contract-deployer"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.dependencies]
cargo-near-build = "0.9.0"
near-sdk = "=5.24.1"
near-contract-standards = "=5.24.1"
hex = "0.4.2"
borsh = "1.6.0"
serde = { version = "1.0.200", features = ["derive"] }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.4.1" }
omni-utils = { git = "https://github.com/near-one/omni-utils", rev = "2b9b29f15b36d5922237f0e21d9f718816187b74" }
omni-types = { path = "omni-types" }
strum = "0.27.2"
strum_macros = "0.27.1"
near-workspaces = "0.22.0"
num_enum = "0.7.3"
tokio = "1.40"
anyhow = "1"
schemars = "0.8"
alloy = { version = "1.0.9", default-features = false, features = ["rlp", "sol-types"] }
ethereum-types = { version = "0.15.1", default-features = false, features = ["rlp", "serialize"] }
rlp = "0.6"
sha3 = "0.10.0"
sha2 = "0.10.0"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rstest = "0.26.1"
