[package]
name = "omni-relayer"
version = "0.5.22"
edition = "2024"
resolver = "2"
repository = "https://github.com/Near-One/omni-bridge"

[dependencies]
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tracing-loki = "0.2"

chrono = "0.4"

anyhow = "1"
futures = "0.3.5"

clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.1"
rust_decimal = { version = "1.37.2", features = ["maths"] }

rustls = { version = "0.23.23", default-features = false }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }

solana-sdk = "2.1.9"
solana-client = "2.1.9"
solana-transaction-status = "2.1.9"
solana-rpc-client-api = "2.1.9"

omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "ffbdc544c0d7f670942e8bf532c7e023c1c6bfec", features = ["abi", "__abi-generate"] }
bridge-indexer-types = { git = "ssh://git@github.com/near-one/bridge-indexer-rs.git", package = "bridge-indexer-types", rev = "7e99a29f783eb3a15e4f2296a0759773118c1c6d" }

near-lake-framework = "0.7.14"
near-jsonrpc-client = "0.20.0"
near-jsonrpc-primitives = "0.34.2"
near-primitives = "0.34.2"
near-crypto = "0.34.2"
near-sdk = { version = "5.24.1", features = ["unit-testing"] }

hex = "0.4.3"
alloy = { version = "1.1", features = ["node-bindings", "providers", "rpc-types", "sol-types", "provider-ws", "signers", "signer-local"] }

mongodb = "3.2.2"
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "connection-manager", "json"] }
async-nats = "0.45"
reqwest = "0.12"

bridge-connector-common = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "bridge-connector-common", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
near-rpc-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "near-rpc-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }

near-bridge-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "near-bridge-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
evm-bridge-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "evm-bridge-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
solana-bridge-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "solana-bridge-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
starknet-bridge-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "starknet-bridge-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
utxo-bridge-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "utxo-bridge-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
utxo-utils = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "utxo-utils", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
wormhole-bridge-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "wormhole-bridge-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }
light-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "light-client", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }

omni-connector = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "omni-connector", rev = "19f6cc07f1802497aabee9c943358a16c3a6d901" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
