[package]
name = "prepopulate-locked-tokens"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "57572b3fe5db1ab29857005703a3ea89fed97fa5" }

near-api = "0.8.2"
solana-client = "2.1.9"
solana-sdk = "2.1.9"
alloy = { version = "1.1", features = ["contract", "reqwest"] }
