[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3.5"
itertools = "0.13.0"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }

near-lake-framework = "0.7.9"
near-lake-primitives = "0.8.0-beta.3"
