[package]
name = "nep141-locker"
version = "0.2.0"
authors = ["nearone <hello@nearone.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
hex.workspace = true
borsh.workspace = true
serde.workspace = true
near-plugins.workspace = true
omni-types = { path = "../omni-types" }
