[package]
name = "omni-tests"
version = "0.1.0"
authors = ["Karim Alabtakh <karim.alabtakh@nearone.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
near-sdk.workspace = true
near-workspaces.workspace = true
near-jsonrpc-client = "0.12.0"
near-primitives = "0.24.1"
near-crypto = "0.24.1"
serde_json = "0.9.10"
tokio.workspace = true
anyhow.workspace = true
omni-types.workspace = true
dotenv = "0.15"
shellexpand = "3.1.0"
json = "0.12.4"
url = "2.5.2"
nep141-connector = { path = "../../../../rainbow-bridge-sdk-rs/bridge-sdk/connectors/nep141-connector" }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.15", features = ["env-filter"] }

[[test]]
name = "deploy_token_test"
path = "src/deploy_token_test.rs"
