[package]
name = "omni-tests"
version = "0.1.0"
authors = ["Near One <info@nearone.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
cargo-near-build.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage", "legacy"] }
near-workspaces.workspace = true
tokio.workspace = true
anyhow.workspace = true
omni-types.workspace = true
rstest.workspace = true
sha2.workspace = true
rand = "0.9"
