[package]
name = "omni-tests"
version = "0.1.0"
authors = ["Near One <info@nearone.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
cargo-near-build.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage", "legacy", "deterministic-account-ids"] }
near-api.workspace = true
near-sandbox.workspace = true
near-token.workspace = true
testresult.workspace = true
tokio.workspace = true
anyhow.workspace = true
omni-types.workspace = true
rstest.workspace = true
sha2.workspace = true
rand = "0.9"
url = "2"
