[package]
name = "omni-types"
version = "3.3.2"
authors = ["Near One <info@nearone.org>"]
edition = "2021"

[dependencies]
near-sdk = { workspace = true, features = ["non-contract-usage"] }
hex.workspace = true
borsh.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
ethereum-types.workspace = true
rlp.workspace = true
schemars.workspace = true
num_enum.workspace = true
alloy.workspace = true
omni-utils.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sha3.workspace = true
sha2.workspace = true
