[package]
name = "omni-types"
version = "3.3.3"
authors = ["Near One <info@nearone.org>"]
edition = "2021"

[features]
abi = ["borsh/unstable__schema", "near-mpc-sdk/abi"]
__abi-generate = ["near-sdk/__abi-generate"]

[dependencies]
near-sdk = { workspace = true, features = ["non-contract-usage"] }
hex.workspace = true
borsh.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
ethereum-types.workspace = true
rlp.workspace = true
schemars.workspace = true
num_enum.workspace = true
alloy.workspace = true
omni-utils.workspace = true
near-mpc-sdk = { workspace = true, features = ["abi"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sha3.workspace = true
sha2.workspace = true
# Work around upstream bug in near-mpc-crypto-types 0.0.1: its `abi` feature
# derives `JsonSchema` on types with `#[serde_as(as = "Hex")]` fields, but its
# `serde_with` dep is declared without the `schemars_0_8` feature. Enabling it
# here (only off-wasm, where schemars is actually available) makes
# `As<Hex>: JsonSchema` resolve via cargo feature unification.
serde_with = { version = "3", features = ["schemars_0_8"] }
