[package]
name = "evm-prover"
version = "0.1.0"
authors = ["Karim Alabtakh <karim.alabtakh@nearone.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
borsh.workspace = true
omni-types.workspace = true
rlp.workspace = true
