[package]
name = "bridge_token_factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_token_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
    "wormhole-anchor-sdk/mainnet",
]
devnet = ["wormhole-anchor-sdk/solana-devnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
cfg-if = "1.0.0"
wormhole-anchor-sdk = { git = "https://github.com/aankor/wormhole-scaffolding.git", branch = "anchor0.30.1", default-features = false }


[dependencies.bitvec]
version = "1.0.1"
default-features = false
features = []
