[package]
name = "bridge_token_factory"
version = "0.2.5"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_token_factory"

[features]
default = ["mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
    "wormhole-anchor-sdk/mainnet",
]
devnet = ["wormhole-anchor-sdk/solana-devnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
solana-program = "2.3.0"
cfg-if = "1.0.0"
wormhole-anchor-sdk = { git = "https://github.com/Near-One/wormhole-scaffolding", branch = "main", default-features = false }
libsecp256k1 = "0.7.1"

[dependencies.bitvec]
version = "1.0.1"
default-features = false
features = []
